bug in de css dat de checkboxes van de prox data niet verschijnen gesquashed

--- a/overview/css/parallel-lineGraph.css
+++ b/overview/css/parallel-lineGraph.css
@@ -20,7 +20,3 @@ svg {
   fill: none;
   clip-path: url(#clip);
 }
-
-.checkboxes {
-  display : none;
-}
